a lot of rewritten components

--- a/apps/accounts/templates/accounts/edit_personal_information.html
+++ b/apps/accounts/templates/accounts/edit_personal_information.html
@@ -1,10 +1,10 @@
-{% extends "accounts/profile.html" %}
+{% extends "accounts/base_profile.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "Edit personal information" %}{% endblock %}
 
 {% block profile_content %}
-<h1>{% trans "Edit personal information" %}</h1>
+<h1 class="mb-4">{% trans "Edit personal information" %}</h1>
 
 <form method="post" enctype="multipart/form-data">
     <input type="hidden" name="next" value="{{ next }}" />
