--- a/apps/accounts/templates/accounts/base_auth.html
+++ b/apps/accounts/templates/accounts/base_auth.html
@@ -1,32 +1,18 @@
-{% extends "manage/base_nonav.html" %}
-{% load i18n core_tags staticfiles %}
+{% extends "base.html" %}
+{% load i18n core_tags static %}
 
 {% block extra_meta %}
 <meta name="robots" content="noindex, nofollow">
 {% endblock %}
 
-{% block extra_js_header %}{% endblock %}
-
-{% block breadcrumb %}{% endblock %}
-
 {% block base_content %}
-    <main class="auth">
+<main class="auth mt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 offset-lg-3">
         {% block content %}{% endblock %}
-      <!-- copyright -->
-      <footer class="auth-footer">
-          <div class="copyright"> {% now "Y" as now %}{% blocktrans with now=now %}Copyright © {{ now }}. All right reserved.{% endblocktrans %} </div>
-      </footer>
-    </main><!-- /.auth -->
-
-    <script>
-      /**
-       * Keep in mind that your scripts may not always be executed after the theme is completely ready,
-       * you might need to observe the `theme:load` event to make sure your scripts are executed after the theme is ready.
-       */
-      $(document).on('theme:init', () =>
-      {
-        /* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
-        particlesJS.load('auth-header', 'assets/javascript/pages/particles.json');
-      })
-    </script> <!-- END PLUGINS JS -->
+      </div>
+    </div>
+  </div>
+</main>
 {% endblock %}
