--- a/apps/accounts/templates/accounts/base_profile.html
+++ b/apps/accounts/templates/accounts/base_profile.html
@@ -8,7 +8,7 @@
     <div class="col-md-3">
         <div class="row mb-4">
             <div class="col-12 col-md-10 offset-md-1">
-                {% include "accounts/includes/sidebar.html" %}
+                {% include "accounts/_sidebar.html" %}
             </div>
         </div>
     </div>
